openssl097 (0.9.7g-5) unstable; urgency=low

  * Add the shlibs for libcrypto again, removed by accident.
  * Change priority of -dbg package to extra.

 -- Kurt Roeckx <root@roeckx.be>  Wed, 12 Oct 2005 20:07:19 +0200

openssl097 (0.9.7g-4) unstable; urgency=low

  * Reintroduce openssl 0.9.7 source package to provide the old
    library version. This should make packages linked against
    the old version installable again. (Closes: #332892)
  * Drop the openssl and libcrypto0.9.7-udeb package.
  * Rename libssl-dev to libssl0.9.7-dev.
  * Add myself to the Uploaders field.

 -- Kurt Roeckx <kurt@roeckx.be>  Mon, 10 Oct 2005 18:38:30 +0200

openssl (0.9.7g-3) unstable; urgency=low

  * change Configure line for debian-freebsd-i386 to debian-kfreebsd-i386
    (closes: #327692)
  * include -dbg version. That implies compiling with -g and without
    -fomit-frame-pointer (closes: #293823, #153811)

 -- Christoph Martin <christoph.martin@uni-mainz.de>  Fri, 23 Sep 2005 13:51:57 +0200

openssl (0.9.7g-2) unstable; urgency=low

  * really include nl translation
  * remove special ia64 code from rc4 code to make the abi compatible to
    older 0.9.7 versions (closes: #310489, #309274)
  * fix compile flag for debian-ppc64 (closes: #318750)
  * small fix in libssl0.9.7.postinst (closes: #239956)
  * fix pk7_mime.c to prevent garbled messages because of to early memory
    free (closes: #310184)
  * include vietnamese debconf translation (closes: #316689)
  * make optimized i386 libraries have non executable stack (closes:
    #321721)
  * remove leftover files from ssleay
  * move from dh_installmanpages to dh_installman
  * change Maintainer to pkg-openssl-devel@lists.alioth.debian.org

 -- Christoph Martin <christoph.martin@uni-mainz.de>  Wed,  7 Sep 2005 15:32:54 +0200

openssl (0.9.7g-1) unstable; urgency=low

  * New upstream release
    * Added support for proxy certificates according to RFC 3820.
      Because they may be a security thread to unaware applications,