@@ -2,6 +2,7 @@ openssl097 (0.9.7g-5) unstable; urgency=low
 
   * Add the shlibs for libcrypto again, removed by accident.
   * Change priority of -dbg package to extra.
+  * Remove the libssl0.9.7-dev package.
 
  -- Kurt Roeckx <root@roeckx.be>  Wed, 12 Oct 2005 20:07:19 +0200
 
